# auto-vision-ai

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_train_endpoint.py  train.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  deploy-ecs.yml  deploy-terraform.yml  destroy-terraform.yml
.github/workflows/legacy/: deploy-ecs.yml
deploy/aws/efs/: efs-policy.json  setup-efs.sh
deploy/aws/roles/: ecs-task-role-policy.json  ecs_task_execution_role_policy.json
deploy/aws/services/: api_task_definition.json  deploy_services.sh  destroy_services.sh  mlflow_task_definition.json  tensorboard_task_definition.json  ui_task_definition.json
deploy/aws/setup/: setup-infrastructure.sh  setup-secrets.sh
deploy/aws/vpc/: get-vpc-info.sh
deploy/terraform/: alb.tf  auto_scaling.tf  ecr.tf  ecs.tf  efs.tf  iam.tf  logs.tf  network.tf  outputs.tf  provider.tf  s3.tf  secrets.tf  security.tf  terraform.tfvars  variables.tf
docker/: Dockerfile  Dockerfile.mlflow  Dockerfile.tensorboard
docs/deployment/: COST_ANALYSIS.md  EFS_SETUP.md  TFORM_README.md
notebooks/: train_models.ipynb
scripts/: build-images.sh  destroy-infrastructure.sh  manual_train_api_test.py  push-images.sh  push-secrets.sh  run_ui.py  setup-terraform-backend.sh
src/autovisionai/: __init__.py  train.py  train_models.ipynb
src/autovisionai/api/: main.py
src/autovisionai/api/endpoints/: inference.py  train.py
src/autovisionai/api/schemas/: inference.py  train.py
src/autovisionai/api/services/: inference_service.py  train_service.py  websocket_manager.py
src/autovisionai/app/: __init__.py  inference.py  train.py
src/autovisionai/app/configs/: __init__.py  config.py  schema.py
src/autovisionai/app/loggers/: __init__.py  app_logger.py  ml_logging.py
src/autovisionai/app/models/fast_scnn/: fast_scnn_inference.py  fast_scnn_trainer.py
src/autovisionai/app/models/mask_rcnn/: mask_rcnn_inference.py  mask_rcnn_model.py  mask_rcnn_trainer.py
src/autovisionai/app/models/unet/: unet_inference.py  unet_trainer.py
src/autovisionai/app/processing/: datamodule.py  dataset.py  transforms.py
src/autovisionai/app/utils/: utils.py
src/autovisionai/configs/: __init__.py  config.py  config.yaml  schema.py
src/autovisionai/configs/local/: data.yaml  logging.yaml  models.yaml
src/autovisionai/core/: __init__.py  inference.py  train.py
src/autovisionai/core/configs/: __init__.py  config.py  schema.py
src/autovisionai/core/configs/local/: app.yaml  logging.yaml  models.yaml
src/autovisionai/core/configs/prod/: app.yaml  data.yaml  logging.yaml  models.yaml
src/autovisionai/core/loggers/: __init__.py  app_logger.py  ml_logging.py
src/autovisionai/core/models/fast_scnn/: fast_scnn_inference.py  fast_scnn_trainer.py
src/autovisionai/core/models/mask_rcnn/: mask_rcnn_inference.py  mask_rcnn_model.py  mask_rcnn_trainer.py
src/autovisionai/core/models/unet/: unet_inference.py  unet_model.py  unet_trainer.py
src/autovisionai/core/processing/: datamodule.py  dataset.py  transforms.py
src/autovisionai/core/utils/: __init__.py  common.py  encoding.py  utils.py
src/autovisionai/loggers/: __init__.py  app_logger.py  ml_logging.py
src/autovisionai/models/fast_scnn/: fast_scnn_inference.py  fast_scnn_model.py  fast_scnn_trainer.py
src/autovisionai/models/mask_rcnn/: mask_rcnn_inference.py  mask_rcnn_model.py  mask_rcnn_trainer.py
src/autovisionai/models/unet/: unet_inference.py  unet_model.py  unet_trainer.py
src/autovisionai/processing/: datamodule.py  dataset.py  transforms.py
src/autovisionai/ui/: README.md  __init__.py  app.py  utils.py
src/autovisionai/ui/pages/: _1_welcome.py  inference.py  inference_page.py  training.py  training_page.py  welcome.py  welcome_page.py
src/autovisionai/utils/: logging.py  ml_logging.py  pathing.py  utils.py
tests/: test_inference.py  test_train.py  test_ui_components.py
tests/api/: conftest.py  test_inference_api.py  test_train_api.py  test_train_service.py
tests/configs/: test_fixture_config.py  test_real_config.py
tests/logging/: test_app_logger.py
tests/models/fast-scnn/: fast_scnn_model_test.py  fast_scnn_trainer_test.py
tests/models/mask_rcnn/: mask_rcnn_model_test.py  mask_rcnn_trainer_test.py
tests/models/unet/: unet_model_test.py  unet_trainer_test.py
tests/processing/: datamodule_test.py  dataset_test.py  transforms_test.py
